2006-09-07  Marzo Sette Torres Junior <marzojr@yahoo.com>
	content/sifixes/*/*.uc: CRLF->LF.

2006-09-06  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* In General: Changed a spaces in identation to tabs.
	* gamewin.cc: When starting a game using '--edit', have time be stopped
	  right from the start.
	* exult_constants.h: Defined c_max_shapes and c_occsize for better support
	  of shapes >1023; defined c_last_gflag for better support of global usecode
	  flags >1023.
	* cheat_screen.cc, usecode/ucmachine.h: Use c_last_gflag instead of '2047'
	  for last global usecode flag.
	* All others: Added support for shapes>1023 to 'occludes.dat'. Shapes are
	  now limited by c_max_shapes instead of 2048, making it easier to increase
	  the limit if it is needed.
	* content/bgkeyring/src/misc/food_stuff/functions.uc: Fixed bug while eating
	  garlic introduced after Q&I was merged in.

2006-09-04  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* game.cc: Starting a game with a mod resulted in wrong mod identification
	  in stdout.
	* mapedit/studio.cc, server/server.cc, server/servewin32.cc: In Windows, use
	  gamedat dir instead of static dir to allow simultaneous editing of two mods
	  that share the same static path (non-Windows already do that).

2006-09-01  Ryan Nunn <colourles@users.sourceforge.net>
	* audio/midi_drivers/LowLevelMidiDriver.cpp : Improving termination code 
	  for threaded midi drivers
	* server/servemsg.cc, server/server.cc, server/servewin32.cc : Rewrote 
	  Exult<->ExultStudio communications to use a socket in Windows. Should be
	  much more stable
	* Other cc files fixing up some 'const' (or lack there of) problems

2006-08-31  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapelst.cc, shapelst.h: The Gimp would fail to load a frame if the
	  game's path in exult.cfg was a relative path. Also, added the ability
	  to export and import all frames of a given shape to/from pngs.

2006-08-29  Marzo Sette Torres Junior <marzojr@yahoo.com>